--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,13 +18,13 @@
       -> Click on tab (Color Conversion)
       -> Copy the color mode (HSL)
   */
-  --hue: 356;
-  --first-color: hsl(var(--hue), 100%, 65%);
+  --hue: 344;
+  --first-color: hsl(var(--hue), 95%, 65%);
   --first-color-alt: hsl(var(--hue), 82%, 56%);
   --first-color-light: hsl(var(--hue), 40%, 80%);
   --title-color: hsl(var(--hue), 24%, 16%);
-  --text-color: hsl(var(--hue), 8%, 45%);
-  --text-color-light: hsl(var(--hue), 8%, 60%);
+  --text-color: hsl(var(--hue), 8%, 35%);
+  --text-color-light: hsl(var(--hue), 8%, 90%);
   --white-color: hsl(0, 0%, 100%);
   --body-color: hsl(0, 0%, 100%);
   --container-color: hsl(0, 0%, 100%);
@@ -32,12 +32,12 @@
 
   /*========== Font and typography ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
-  --body-font: "Syne", sans-serif;
+  --body-font: "Quicksands", sans-serif;
   --biggest-font-size: 2rem;
   --h1-font-size: 1.5rem;
-  --h2-font-size: 1.25rem;
-  --h3-font-size: 1rem;
-  --normal-font-size: .938rem;
+  --h2-font-size: 1.45rem;
+  --h3-font-size: 2rem;
+  --normal-font-size: .995rem;
   --small-font-size: .813rem;
   --smaller-font-size: .75rem;
 
@@ -59,7 +59,7 @@
     --h1-font-size: 2.25rem;
     --h2-font-size: 1.5rem;
     --h3-font-size: 1.25rem;
-    --normal-font-size: 1.125rem;
+    --normal-font-size: 2.125rem;
     --small-font-size: .875rem;
     --smaller-font-size: .813rem;
   }
@@ -470,6 +470,7 @@ transform: translateY(-.5rem);
 }
 
 .services__card{
+  border-radius: 25px;
   background-color: var(--container-color);
   padding:3.5rem 1.5rem;
   box-shadow: 0 12px 24px var(--shadow-color);
@@ -494,10 +495,12 @@ transform: translateY(-.5rem);
 }
 
 .services__button{
+  border-radius: 25px;
   cursor: pointer;
 }
 
 .services__modal{
+
   position: fixed;
   inset: 0;
   background-color: hsla(var(--hue), 90%, 30%, .3);
@@ -513,6 +516,7 @@ transform: translateY(-.5rem);
 }
 
 .services__modal-content{
+  border-radius: 25px;
   max-height: 420px;
   position: relative;
   background-color: var(--container-color);
